--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ body {
 }
 
 .card__image {
-  background: url(/images/image-header-mobile.jpg) no-repeat center/cover;
+  background: url(/../images/image-header-mobile.jpg) no-repeat center/cover;
   background-color: hsl(277, 64%, 61%);
   background-blend-mode: multiply;
   opacity: 0.9;
@@ -92,7 +92,7 @@ body {
 }
 @media screen and (min-width: 62.5rem) {
   .card__image {
-    background: url(/images/image-header-desktop.jpg) no-repeat center/cover;
+    background: url(/../images/image-header-desktop.jpg) no-repeat center/cover;
     order: 2;
     background-color: hsl(277, 64%, 61%);
     background-blend-mode: multiply;
