--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ body {
 }
 
 .card__image {
-  background: url(/images/image-header-mobile.jpg) no-repeat center/cover;
+  background: url(../images/image-header-mobile.jpg) no-repeat center/cover;
   background-color: $Accent;
   background-blend-mode: multiply;
   opacity: 0.9;
@@ -34,7 +34,7 @@ body {
   filter: brightness(1.3);
 
   @media screen and (min-width: $breakpoint) {
-    background: url(/images/image-header-desktop.jpg) no-repeat center/cover;
+    background: url(../images/image-header-desktop.jpg) no-repeat center/cover;
     order: 2;
     background-color: $Accent;
     background-blend-mode: multiply;
